layout-longer map, align weather w stop_graph

--- a/src/index.css
+++ b/src/index.css
@@ -13,50 +13,54 @@ body {
 
 .stop-placard {
   grid-column: 1 / 3;
-  grid-row: 1 / 3;
 }
 
 .olli-logo-div {
   grid-column: 1 / 2;
-  grid-row: 1 / 3;
 }
 
 .stop-name-div {
   grid-column: 2 / 3;
-  grid-row: 1 / 3;
 }
 
-.arrival-list, .clock-weather, .asl-screen, .info-win, .pois-nearby {
-  /* border-left: 12px solid #444444; */
-}
+/* .arrival-list, .clock-weather, .asl-screen, .info-win, .pois-nearby {
+  border-left: 12px solid #444444;
+} */
 
 .arrival-list, .clock-weather, .asl-screen, .info-win {
   grid-column: 1 / 2;
   padding: 24px 12px 0 12px;
 }
 
+.clock-weather {
+  grid-row: 3 / 4;
+  padding-bottom: 24px;
+}
+
 .asl-screen {
-  grid-row: 5 / 6;
+  grid-row: 4 / 5;
 }
 
 .info-win {
-  grid-row: 6 / 8;
-  min-height: 384px;
+  grid-row: 5 / 11;
+  min-height: 624px;
 }
 
 .pois-nearby {
   grid-column: 1 / 3;
+  grid-row: 11 / 12;
 }
 
 .mapboxgl-map, .stop-graph {
   grid-column: 2 / 3;
 }
 .mapboxgl-map {
-  grid-row: 4 / 8;
+  grid-row: 4 / 11;
 }
 .stop-graph {
   grid-row: 3 / 4;
 }
+
 
 h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
@@ -74,10 +78,6 @@ h1 {
 
 .arrival-list {
   border-top: 4px solid #444444;
-}
-.clock-weather {
-  grid-row: 3 / 5;
-  padding-bottom: 24px;
 }
 
 .weather img {
@@ -177,7 +177,7 @@ td.stop-btn {
   outline: none;
 }
 input.stop-btn-img.selected {
-  background-color: #00cfff;
+  background-color: #1c304a;
 }
 
 .poi-pill, button.directionsbutton {
